--- a/package.json
+++ b/package.json
@@ -11,9 +11,16 @@
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.4.12",
         "axios": "^1.1.2",
+        "eslint": "^8.40.0",
+        "eslint-plugin-vue": "^9.13.0",
         "laravel-vite-plugin": "^0.7.4",
+        "postcss": "^8.4.18",
         "tailwindcss": "^3.3.2",
         "vite": "^4.2.1",
         "vue": "^3.2.41"
+    },
+    "dependencies": {
+        "@inertiajs/inertia": "^0.11.1",
+        "@inertiajs/inertia-vue3": "^0.6.0"
     }
 }
