--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "@inertiajs/vue3": "^1.0.0",
         "@tailwindcss/forms": "^0.5.3",
         "@vitejs/plugin-vue": "^4.0.0",
         "alpinejs": "^3.4.2",
@@ -20,7 +19,6 @@
         "vue": "^3.2.41"
     },
     "dependencies": {
-        "@inertiajs/inertia": "^0.11.1",
-        "@inertiajs/inertia-vue3": "^0.6.0"
+        "@inertiajs/vue3": "^1.0.6"
     }
 }
