--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "vue": "^3.2.41"
     },
     "dependencies": {
-        "@inertiajs/vue3": "^1.0.6"
+        "@inertiajs/vue3": "^1.0.6",
+        "sweetalert2": "^11.7.5"
     }
 }
